// ERD con C3.2 — Đề xuất khen thưởng (1 bảng chính + 3 bảng stub)
// Các bảng "stub" chỉ vẽ tên + khóa để thể hiện FK; chi tiết ở ERD-1.
Project erd_de_xuat { database_type: 'PostgreSQL' }

Table BangDeXuat {
  id varchar(30) [pk]
  co_quan_don_vi_id varchar(30)
  don_vi_truc_thuoc_id varchar(30)
  nguoi_de_xuat_id varchar(30) [note: 'nullable — SetNull khi xóa tài khoản']
  nguoi_duyet_id varchar(30)
  loai_de_xuat varchar(20) [not null, note: 'CA_NHAN_HANG_NAM | DON_VI_HANG_NAM | NIEN_HAN | CONG_HIEN | DOT_XUAT | NCKH']
  nam int [not null]
  thang int
  status varchar(20) [not null, default: 'PENDING', note: 'PENDING | APPROVED | REJECTED']
  data_danh_hieu jsonb
  data_thanh_tich jsonb
  data_nien_han jsonb
  data_cong_hien jsonb
  files_attached jsonb
  files_attached_admin jsonb
  ghi_chu text
  rejection_reason text
  ngay_duyet timestamp
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table CoQuanDonVi {
  id varchar(30) [pk]
  ten_don_vi varchar(255)
  Note: 'stub — chi tiết ở ERD-1'
}
Table DonViTrucThuoc {
  id varchar(30) [pk]
  ten_don_vi varchar(255)
  Note: 'stub — chi tiết ở ERD-1'
}
Table TaiKhoan {
  id varchar(30) [pk]
  username varchar(100)
  Note: 'stub — chi tiết ở ERD-1'
}

Ref: BangDeXuat.co_quan_don_vi_id > CoQuanDonVi.id [delete: cascade]
Ref: BangDeXuat.don_vi_truc_thuoc_id > DonViTrucThuoc.id [delete: cascade]
Ref: BangDeXuat.nguoi_de_xuat_id > TaiKhoan.id [delete: set null]
Ref: BangDeXuat.nguoi_duyet_id > TaiKhoan.id [delete: set null]
